--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,4 @@
-# 1. Segurança (O MAIS IMPORTANTE)
+# 1. Segurança
 .env
 .git
 .gitignore
@@ -9,7 +9,7 @@ __pycache__
 *.pyo
 *.pyd
 
-# 3. Ambiente Virtual (O erro mais comum)
+# 3. Ambiente Virtual 
 # Nunca envie sua pasta venv, o Docker cria o ambiente dele sozinho!
 venv/
 env/
